# xcover-python

./: .bumpversion.cfg  .flake8  .github-ci.env  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yaml  semgrep.yml
tests/: conftest.py  factories.py  test_auth.py  test_config.py  test_encoder.py  test_utils.py  test_xcover.py  utils.py
tests/cassettes/test_xcover/: test_add_quotes.yaml  test_auto_retry.yaml  test_booking_modification.yaml  test_booking_modification__error.yaml  test_booking_modification_quote_workflow.yaml  test_call.yaml  test_cancel_booking.yaml  test_cancel_booking_with_confirmation.yaml  test_confirm_booking.yaml  test_create_booking.yaml  test_custom_header.yaml  test_delete_quotes.yaml  test_get_booking.yaml  test_get_instalments.yaml  test_get_quote.yaml  test_instant_booking.yaml  test_list_bookings.yaml  test_opt_out.yaml  test_quote.yaml  test_quote_422.yaml  test_quote_request.yaml  test_trigger_email.yaml  test_trigger_email__wrong_payload.yaml  test_update_quote.yaml
xcover/: __init__.py  auth.py  config.py  encoder.py  exceptions.py  utils.py  xcover.py
