[tool.poetry]
name = "xcore"
version = "0.0.1"
description = "Python client for XCover API (XCore)."
authors = ["Artem Kolesnikov <artem@covergenius.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pre-commit = "^2.15"
pytest-dotenv = "^0.5"
pytest-recording = "^0.12"
bump2version = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
