[tool.poetry]
name = "xcover-python"
version = "0.0.2"
description = "Python client for XCover API (XCore)."
authors = ["Artem Kolesnikov <artem@covergenius.com>"]
maintainers = ["Artem Kolesnikov <artem@covergenius.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.covergenius.com/xcover/"
repository = "https://github.com/CoverGenius/xcover-python"
keywords = ["xcover", "api", "api-client", "insurance"]
packages = [
    { include = "xcover" }
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pre-commit = "^2.15"
pytest-dotenv = "^0.5"
pytest-recording = "^0.12"
bump2version = "^1.0"
factory-boy = "^3.2.0"

[tool.pytest.ini_options]
addopts = "-s"
testpaths = ["tests"]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
