[tool.poetry]
name = "xcover-python"
version = "0.1.0"
description = "Python client for XCover API (XCore)."
authors = ["Artem Kolesnikov <artem@covergenius.com>"]
maintainers = ["Artem Kolesnikov <artem@covergenius.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.covergenius.com/xcover/"
repository = "https://github.com/CoverGenius/xcover-python"
keywords = ["xcover", "api", "api-client", "insurance"]
packages = [
    { include = "xcover" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pre-commit = "^3.2.2"
pytest-dotenv = "^0.5.2"
pytest-recording = "^0.12.2"
bump2version = "^1.0.1"
factory-boy = "^3.2.1"
pytest-cov = "^4.0.0"
coverage = {version = "^7.2.3", extras = ["toml"]}


[tool.black]
line-length = 99

[tool.coverage.html]
directory = "build/coverage"

[tool.coverage.run]
source = ["xcover"]

[tool.pytest.ini_options]
addopts = "-s --cov-report=xml --cov-report=term-missing --cov-report=html --cov=xcover"
testpaths = ["tests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
